src/test/ui/parser/keyword-box-as-identifier.stderr
error: expected pattern, found `=`
  --> $DIR/keyword-box-as-identifier.rs:2:13
   |
LL |     let box = "foo"; //~ error: expected pattern, found `=`
   |             ^ expected pattern

error: aborting due to previous error

