src/test/ui/parser/keyword-box-as-identifier.rs
fn main() {
    let box = "foo"; //~ error: expected pattern, found `=`
}
